# sea-of-clis

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: cannons.cpp  cannons.h  cannons_heavy.cpp  cannons_heavy.h  cannons_light.cpp  cannons_light.h  cannons_medium.cpp  cannons_medium.h  cannons_small.cpp  cannons_small.h  cannons_type.cpp  cannons_type.h  game.cpp  game.h  goods.cpp  goods.h  harbor.cpp  harbor.h  logger.cpp  logger.h  main.cpp  pch.h  pch.hpp  player.cpp  player.h  ship.cpp  ship.h  ship.hpp  ship_small.cpp  ship_small.h  ship_type.cpp  ship_type.h  tradable.h
src/filesystem/: filesystem.h  sqlite_3.cpp  sqlite_3.h
src/random/: random.h
src/utils/: map.h
